# rust-mancala

./: .gitignore  Cargo.toml  README.md  compress_2d.py  count.py  総当たり結果可視化.ipynb
benches/: ai.rs  board.rs
hist/: NN4_false.txt  NN4_true.txt  NN4_true_0.txt  NN4_true_1.txt  NN4_true_2.txt  NN4_true_4.txt  NN6_false.txt  NN6_true.txt  NN6_true_0.txt  NN6_true_1.txt  NN6_true_2.txt  NN6_true_3.txt  NN6_true_4.txt  diff_false.txt  diff_true.txt  raw_false.txt  raw_true.txt  true_NN4-0_NN6-0.txt
src/: board.rs  game.rs  learn.rs  lib.rs  main.rs
src/ai/: NN4_64.model  NN4_false.model  NN6_false.model  NN6_true.model  base.rs  cut_dfs.rs  depth_search.rs  evaluator.rs  greedy.rs  leaf_learned.rs  mctree.rs  mem.rs  mod.rs  pos1_score.txt  pos2_score.txt  simple.rs  sparse.rs  utils.rs
src/ai/evaluator/: NN4_true.model  mod.rs  nn4_true.rs  pos1_score.txt  score.rs
src/learn/: mod.rs  search.rs  utils.rs
