[package]
name = "mancala-rust"
version = "0.1.0"
authors = ["Daiju Nakayama <42.daiju@gmail.com>"]
edition = "2018"

[dependencies]
rand = "*"
rand_pcg = "*"
fnv = "*"
lazy_static = "*"
ndarray = { version = "*", features = ["serde-1"] }
crossbeam = "*"
indicatif = "*"

rust-nn = {version = "*", git = "https://github.com/hinohi/rust-nn" }

[dev-dependencies]
criterion = "*"

[[bench]]
name = "ai"
harness = false

[[bench]]
name = "board"
harness = false
