[package]
name = "mancala-rust"
version = "0.2.0"
authors = ["Daiju Nakayama <42.daiju@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8"
rand_pcg = "0.3"
fnv = "1.0"
lazy_static = "1.4"
ndarray = { version = "0.15", features = ["serde-1"] }
crossbeam = { version = "0.8.0", optional = true }
indicatif = { version = "0.16.0", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
instant = "0.1"

rust-nn = {version = "*", git = "https://github.com/hinohi/rust-nn" }

[dev-dependencies]
criterion = "*"

[[bench]]
name = "ai"
harness = false

[[bench]]
name = "board"
harness = false

[features]
default = ["make_hist"]
make_hist = [
    "crossbeam",
    "indicatif",
]
serde-1 = ["serde"]
