[package]
name = "mancala-rust"
version = "0.2.2"
authors = ["Daiju Nakayama <42.daiju@gmail.com>"]
edition = "2024"

[dependencies]
rand = "0.9"
rand_pcg = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
fnv = "1"
lazy_static = "1.5"
ndarray = { version = "0.16", features = ["serde"] }
crossbeam = { version = "0.8", optional = true }
indicatif = { version = "0.18", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
instant = "0.1"

rust-nn = {version = "*", git = "https://github.com/hinohi/rust-nn" }

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "ai"
harness = false

[[bench]]
name = "board"
harness = false

[features]
default = ["make_hist"]
make_hist = [
    "crossbeam",
    "indicatif",
]
serde-1 = ["serde"]
